# braincomeua_project

./: Readme.md  docker-compose.yml  pyproject.toml
braincomua_project/braincomua_project/: asgi.py  settings.py  urls.py  wsgi.py
braincomua_project/parser_app/: models.py
braincomua_project/parser_app/migrations/: 0001_initial.py  0002_product_delete_testrecord.py
modules/: 1_selenium_parser.py  load_django.py  read_test.py  test_mosel.py
modules/config/: driver_config.py
modules/utils/: collect_data.py  collect_products.py  get_main_url.py  search_product.py  storage.py
results/: products.csv
