[tool.poetry]
name = "braincomua-project"
version = "0.1.0"
description = "parsing brain.com.ua"
authors = ["Igor <Aleshichev.git@email.ua>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.2.8"
selenium = "^4.38.0"
python-dotenv = "^1.2.1"
psycopg2-binary = "^2.9.11"
undetected-chromedriver = "^3.5.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
